# search-benchmark-game

./: .gitignore  Makefile  README.md  docs  results.json
engines/: SearchTantivy.java
engines/lucene-8.10.1/: Makefile  build.gradle
engines/lucene-8.10.1/src/main/java/: DoQuery.java
engines/lucene-9.5.0/: Makefile  build.gradle
engines/lucene-9.5.0/src/main/java/: BuildIndex.java  DoQuery.java
engines/lucene-9.7.0/: Makefile  build.gradle  query.sh
engines/lucene-9.7.0/src/main/java/: DoQuery.java
engines/lucene-tantivy/: Cargo.toml  Makefile  query.sh  settings.gradle
engines/lucene-tantivy/src-rs/: lib.rs  util.rs
engines/lucene-tantivy/src-rs/util/: build_index.rs  do_query.rs
engines/lucene-tantivy/src/main/java/: BuildIndex.java  DoQuery.java  SearchTantivy.java
engines/tantivy-0.19/: Cargo.toml  Makefile
engines/tantivy-0.19/src/: lib.rs
engines/tantivy-0.20/: Cargo.toml  Makefile
engines/tantivy-0.20/src/: lib.rs
engines/tantivyJNI/: Cargo.toml  Makefile
engines/tantivyJNI/src/: lib.rs
engines/tantivyJNI/src/util/: build_index.rs
queries/: basic_queries.jsonl  basic_queries_no_sloppy_phrase.jsonl  basic_queries_trimmed.jsonl
src/: bench_results_to_text.py  client.py  extract_query.py  merge_jsons.py  overlap.py  run_many.py  sum_many.py
web/: package.json
web/public/: index.html
web/src/: index.js
