[package]
name = "tantivy-jni"
version = "0.1.0"
authors = ["Jason Wolfe"]
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tantivy = "0.20"
jni = "0.21.1"
futures = "*"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
# debug-assertions = false

[lib]
crate_type = ["cdylib"]
path = "src-rs/lib.rs"
